// This file is auto-generated by @hey-api/openapi-ts

export type ClientOptions = {
    baseUrl: 'http://localhost:9000' | (string & {});
};

/**
 * DatasetRead
 */
export type DatasetRead = {
    /**
     * Id
     */
    id: number;
    /**
     * Project Id
     */
    project_id: number;
    /**
     * Name
     */
    name: string;
    /**
     * Description
     */
    description?: string | null;
};

/**
 * HTTPValidationError
 */
export type HttpValidationError = {
    /**
     * Detail
     */
    detail?: Array<ValidationError>;
};

/**
 * LoginRequest
 */
export type LoginRequest = {
    /**
     * Email
     */
    email: string;
    /**
     * Password
     */
    password: string;
};

/**
 * ProjectRead
 */
export type ProjectRead = {
    /**
     * Name
     */
    name: string;
    /**
     * Description
     */
    description?: string | null;
    /**
     * Id
     */
    id: number;
    /**
     * Created At
     */
    created_at?: string | null;
};

/**
 * RegisterRequest
 */
export type RegisterRequest = {
    /**
     * Email
     */
    email: string;
    /**
     * Password
     */
    password: string;
};

/**
 * TokenResponse
 */
export type TokenResponse = {
    /**
     * Access Token
     */
    access_token: string;
    /**
     * Refresh Token
     */
    refresh_token: string;
    /**
     * Token Type
     */
    token_type?: string;
};

/**
 * ValidationError
 */
export type ValidationError = {
    /**
     * Location
     */
    loc: Array<string | number>;
    /**
     * Message
     */
    msg: string;
    /**
     * Error Type
     */
    type: string;
};

export type RegisterApiV1AuthRegisterPostData = {
    body: RegisterRequest;
    path?: never;
    query?: never;
    url: '/api/v1/auth/register';
};

export type RegisterApiV1AuthRegisterPostErrors = {
    /**
     * Validation Error
     */
    422: HttpValidationError;
};

export type RegisterApiV1AuthRegisterPostError = RegisterApiV1AuthRegisterPostErrors[keyof RegisterApiV1AuthRegisterPostErrors];

export type RegisterApiV1AuthRegisterPostResponses = {
    /**
     * Successful Response
     */
    200: TokenResponse;
};

export type RegisterApiV1AuthRegisterPostResponse = RegisterApiV1AuthRegisterPostResponses[keyof RegisterApiV1AuthRegisterPostResponses];

export type LoginApiV1AuthLoginPostData = {
    body: LoginRequest;
    path?: never;
    query?: never;
    url: '/api/v1/auth/login';
};

export type LoginApiV1AuthLoginPostErrors = {
    /**
     * Validation Error
     */
    422: HttpValidationError;
};

export type LoginApiV1AuthLoginPostError = LoginApiV1AuthLoginPostErrors[keyof LoginApiV1AuthLoginPostErrors];

export type LoginApiV1AuthLoginPostResponses = {
    /**
     * Successful Response
     */
    200: TokenResponse;
};

export type LoginApiV1AuthLoginPostResponse = LoginApiV1AuthLoginPostResponses[keyof LoginApiV1AuthLoginPostResponses];

export type RefreshApiV1AuthRefreshPostData = {
    body?: never;
    path?: never;
    query: {
        /**
         * Refresh Token
         */
        refresh_token: string;
    };
    url: '/api/v1/auth/refresh';
};

export type RefreshApiV1AuthRefreshPostErrors = {
    /**
     * Validation Error
     */
    422: HttpValidationError;
};

export type RefreshApiV1AuthRefreshPostError = RefreshApiV1AuthRefreshPostErrors[keyof RefreshApiV1AuthRefreshPostErrors];

export type RefreshApiV1AuthRefreshPostResponses = {
    /**
     * Successful Response
     */
    200: TokenResponse;
};

export type RefreshApiV1AuthRefreshPostResponse = RefreshApiV1AuthRefreshPostResponses[keyof RefreshApiV1AuthRefreshPostResponses];

export type MeApiV1AuthMeGetData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/v1/auth/me';
};

export type MeApiV1AuthMeGetResponses = {
    /**
     * Successful Response
     */
    200: unknown;
};

export type ListProjectsApiV1ProjectsGetData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/v1/projects/';
};

export type ListProjectsApiV1ProjectsGetResponses = {
    /**
     * Response List Projects Api V1 Projects  Get
     *
     * Successful Response
     */
    200: Array<ProjectRead>;
};

export type ListProjectsApiV1ProjectsGetResponse = ListProjectsApiV1ProjectsGetResponses[keyof ListProjectsApiV1ProjectsGetResponses];

export type ListDatasetsApiV1DatasetsGetData = {
    body?: never;
    path?: never;
    query: {
        /**
         * Project Id
         *
         * Project ID
         */
        project_id: number;
    };
    url: '/api/v1/datasets/';
};

export type ListDatasetsApiV1DatasetsGetErrors = {
    /**
     * Validation Error
     */
    422: HttpValidationError;
};

export type ListDatasetsApiV1DatasetsGetError = ListDatasetsApiV1DatasetsGetErrors[keyof ListDatasetsApiV1DatasetsGetErrors];

export type ListDatasetsApiV1DatasetsGetResponses = {
    /**
     * Response List Datasets Api V1 Datasets  Get
     *
     * Successful Response
     */
    200: Array<DatasetRead>;
};

export type ListDatasetsApiV1DatasetsGetResponse = ListDatasetsApiV1DatasetsGetResponses[keyof ListDatasetsApiV1DatasetsGetResponses];

export type ListAssetsApiV1AssetsGetData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/v1/assets/';
};

export type ListAssetsApiV1AssetsGetResponses = {
    /**
     * Successful Response
     */
    200: unknown;
};

export type ListJobsApiV1JobsGetData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/v1/jobs/';
};

export type ListJobsApiV1JobsGetResponses = {
    /**
     * Successful Response
     */
    200: unknown;
};

export type DebugEnvApiV1DebugEnvGetData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/v1/debug/env';
};

export type DebugEnvApiV1DebugEnvGetResponses = {
    /**
     * Successful Response
     */
    200: unknown;
};
