@startuml
title 30-class-AuthService / static structure
skinparam BackgroundColor #f0f0f0

package "app.services" {
  class AuthService <<service>> {
    + register(payload: RegisterRequest) : TokenResponse
    + login(payload: LoginRequest) : TokenResponse
    + refresh(refresh_token: str) : TokenResponse
    + build_google_authorization_url(redirect_to: str?) : str
    + build_github_authorization_url(redirect_to: str?) : str
    + login_with_google_code(code: str) : TokenResponse
    + login_with_github_code(code: str) : TokenResponse
  }
}

package "app.repositories" {
  class UserRepository <<repo>> {
    + get_by_email(email: str) : User
    + get_by_google_id(google_id: str) : User
    + get_by_github_id(github_id: str) : User
    + create(email: str, password_hash: str?, google_id: str?, github_id: str?) : User
    + link_google_account(user: User, google_id: str) : User
    + link_github_account(user: User, github_id: str) : User
  }
}

package "app.models.orm" {
  class User <<entity>> {
    + id: int
    + email: str
    + password_hash: Optional[str]
    + google_id: Optional[str]
    + github_id: Optional[str]
    + is_active: bool
  }
}

package "app.models.schemas.auth" {
  class RegisterRequest <<schema>> {
    ..fields..
  }
  class LoginRequest <<schema>> {
    ..fields..
  }
  class TokenResponse <<schema>> {
    ..fields..
  }
}

package "app.core" {
  class AuthUser <<auth>> {
    + id: int
    + tenant_id: Optional[int]
    + roles: Tuple[str, ...]
    + permissions: Tuple[str, ...]
  }

  class SecurityModule <<module>> {
    + verify_password(plain: str, hashed: str) : bool
    + hash_password(plain: str) : str
    + create_access_token(auth: AuthUser) : str
    + create_refresh_token(auth: AuthUser) : str
  }
}

' Relationships
AuthService --> UserRepository : load/create users
UserRepository --> User        : returns
AuthService --> RegisterRequest : input (sign-up)
AuthService --> LoginRequest    : input (sign-in)
AuthService --> TokenResponse   : output (tokens)
AuthService --> AuthUser        : builds identity for tokens
AuthService --> SecurityModule  : "hash/verify password + mint tokens"

note right of AuthService
Source: app/services/auth_service.py
Handles sign-up, sign-in and token rotation.
Also orchestrates Google/GitHub OAuth, exchanging codes for profiles
and linking accounts to password logins.
end note

note right of SecurityModule
Source: app/core/security.py
Low-level password hashing and JWT helpers.
end note

@enduml
